--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "elasticsearch": "^16.7.0",
     "http-aws-es": "^6.0.0",
     "jimp": "^0.9.6",
+    "jsonwebtoken": "^8.5.1",
     "middy": "^0.34.0",
     "serverless-aws-documentation": "^1.1.0",
     "source-map-support": "^0.5.10"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/elasticsearch": "^5.0.36",
+    "@types/jsonwebtoken": "^8.3.8",
     "@types/node": "^10.12.18",
     "aws-sdk": "^2.646.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
